--- a/gst/index.html
+++ b/gst/index.html
@@ -36,7 +36,7 @@
                     </li>
                     <li>
                         <div class="dropdown">
-                            <button class="btn btn-primary dropdown-toggle bc" type="button" data-toggle="dropdown">Prices
+                            <button class="btn btn-primary dropdown-toggle bc" type="button" data-toggle="dropdown">Prices!! 
                                 <span class="caret"></span></button>
                             <ul class="dropdown-menu ">
                                 <li><a href="#" class="price"><i ></i> Rise</a></li>
