--- a/gst/index.html
+++ b/gst/index.html
@@ -26,13 +26,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Home! <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About Us </a>
+                        <a class="nav-link" href="#">About Us! </a>
                     </li>
                     <li class = "nav-item">
-                        <a class = "nav-link" href = "indexsign.html"> Sign-In</a>
+                        <a class = "nav-link" href = "indexsign.html"> Sign-In!</a>
                     </li>
                     <li>
                         <div class="dropdown">
