--- a/gst/index.html
+++ b/gst/index.html
@@ -30,10 +30,10 @@
                         <a class="nav-link" href="index.html">Home! <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About Us! </a>
+                        <a class="nav-link" href="#">About Us </a>
                     </li>
                     <li class = "nav-item">
-                        <a class = "nav-link" href = "indexsign.html"> Sign-In!</a>
+                        <a class = "nav-link" href = "indexsign.html"> Sign-In</a>
                     </li>
                     <li>
                         <div class="dropdown">
